--- a/shree_shyam_tv.html.html
+++ b/shree_shyam_tv.html.html
@@ -20,7 +20,7 @@
          * API CONFIGURATION
          * Replace 'localhost' with your server IP when hosting online.
          */
-        const API_BASE_URL = "http://localhost:5000"; 
+        const API_BASE_URL = "https://shree-shyam-tv.onrender.com""; 
 
         // Admin mode check (?admin=true in URL)
         let isAdmin = new URLSearchParams(window.location.search).get('admin') === 'true';
@@ -449,4 +449,5 @@
         });
     </script>
 </body>
+
 </html>
